# dunai-imgui

./: .gitignore  cabal.project  flake.nix  fourmolu.yaml
.github/workflows/: ci.yml
bearriver-imgui/: bearriver-imgui.cabal
bearriver-imgui/lib/: MyLib.hs
bearriver-imgui/lib/Internal/: Prelude.hs
bearriver-imgui/test/: Main.hs
dunai-imgui/: CHANGELOG.md  dunai-imgui.cabal
dunai-imgui/lib/: Backend.hs  MyLib.hs
dunai-imgui/lib/Backend/: SDL2OpenGL3.hs
dunai-imgui/lib/Data/MonadicStreamFunction/: Extra.hs
dunai-imgui/lib/FRP/Dunai/DearImGui/: Backend.hs  Types.hs  Widgets.hs
dunai-imgui/lib/FRP/Dunai/DearImGui/Backend/: SDL2OpenGL3.hs
dunai-imgui/lib/FRP/Dunai/DearImGui/Widgets/: Button.hs  Checkbox.hs  InputText.hs  Plotting.hs  Radio.hs  Slider.hs  TextInput.hs
dunai-imgui/lib/Internal/: Prelude.hs
dunai-imgui/test/: Main.hs
rhine-imgui/: CHANGELOG.md  rhine-imgui.cabal
