cabal-version:      3.4
name:               dunai-imgui
version:            0.1.0.0
synopsis:           Dear ImGui backend for Dunai
-- description:
homepage:           https://github.com/ners/dunai-imgui
license:            Apache-2.0
author:             ners <ners@gmx.ch>, Cajunvoodoo <tomdwy1008@gmail.com>
maintainer:         ners@gmx.ch
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    default-language: GHC2021
    ghc-options:
        -Weverything
        -Wno-unsafe
        -Wno-missing-safe-haskell-mode
        -Wno-missing-export-lists
        -Wno-missing-import-lists
        -Wno-missing-kind-signatures
        -Wno-all-missed-specialisations
        -Werror=missing-fields
        -Werror=incomplete-patterns
    default-extensions:
        ApplicativeDo
        Arrows
        BlockArguments
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        ExplicitNamespaces
        LambdaCase
        NoFieldSelectors
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
        RecursiveDo
        TypeFamilies
        ViewPatterns

library
    import:           common
    exposed-modules:
        FRP.Dunai.DearImGui.Backend,
        FRP.Dunai.DearImGui.Backend.SDL2OpenGL3,
        FRP.Dunai.DearImGui.Types,
        FRP.Dunai.DearImGui.Widgets,
        FRP.Dunai.DearImGui.Widgets.Button,
        FRP.Dunai.DearImGui.Widgets.InputText,
        FRP.Dunai.DearImGui.Widgets.Plotting,
    other-modules:
        Data.MonadicStreamFunction.Extra,
        Internal.Prelude,
    build-depends:
        base <5,
        dear-imgui,
        dunai,
        extra,
        generic-lens,
        gl,
        lens,
        managed,
        sdl2,
        text,
        transformers-base,
        unliftio,
    hs-source-dirs:   lib
    default-language: GHC2021

test-suite dunai-imgui-test
    import:           common
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base <5,
        dunai-imgui,
